[package]
name = "arqr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
piston_window = "0.123.0"

[dependencies.nokhwa]
version = "0.10.3"
features = ["input-msmf", "output-threaded"]